src/grammar/MiLenguajeParser.js
// Generated from ./grammar/MiLenguaje.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import MiLenguajeVisitor from './MiLenguajeVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class MiLenguajeParser extends antlr4.Parser {

    static grammarFileName = "MiLenguaje.g4";
    static literalNames = [ null, "'vainilla'", "'cherry'", "'fresa'", "'pasteles'", 
                            "';'", null, "'{'", "'}'" ];
    static symbolicNames = [ null, null, null, null, "PASTELES", "SEMI", 
                             "BOWL", "LLAVECITAA", "LLAVECITAB", "NL", "SP" ];
    static ruleNames = [ "start", "molde", "declaraciones", "type" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = MiLenguajeParser.ruleNames;
        this.literalNames = MiLenguajeParser.literalNames;
        this.symbolicNames = MiLenguajeParser.symbolicNames;
    }



	start() {
	    let localctx = new StartContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, MiLenguajeParser.RULE_start);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 8;
	        this.match(MiLenguajeParser.PASTELES);
	        this.state = 9;
	        this.match(MiLenguajeParser.LLAVECITAA);
	        this.state = 10;
	        this.match(MiLenguajeParser.NL);
	        this.state = 11;
	        this.molde();
	        this.state = 12;
	        this.match(MiLenguajeParser.LLAVECITAB);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	molde() {
	    let localctx = new MoldeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, MiLenguajeParser.RULE_molde);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 17;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 14) !== 0)) {
	            this.state = 14;
	            this.declaraciones();
	            this.state = 19;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaraciones() {
	    let localctx = new DeclaracionesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, MiLenguajeParser.RULE_declaraciones);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 20;
	        this.type();
	        this.state = 21;
	        this.match(MiLenguajeParser.BOWL);
	        this.state = 22;
	        this.match(MiLenguajeParser.SEMI);
	        this.state = 23;
	        this.match(MiLenguajeParser.NL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type() {
	    let localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, MiLenguajeParser.RULE_type);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 25;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 14) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

MiLenguajeParser.EOF = antlr4.Token.EOF;
MiLenguajeParser.T__0 = 1;
MiLenguajeParser.T__1 = 2;
MiLenguajeParser.T__2 = 3;
MiLenguajeParser.PASTELES = 4;
MiLenguajeParser.SEMI = 5;
MiLenguajeParser.BOWL = 6;
MiLenguajeParser.LLAVECITAA = 7;
MiLenguajeParser.LLAVECITAB = 8;
MiLenguajeParser.NL = 9;
MiLenguajeParser.SP = 10;

MiLenguajeParser.RULE_start = 0;
MiLenguajeParser.RULE_molde = 1;
MiLenguajeParser.RULE_declaraciones = 2;
MiLenguajeParser.RULE_type = 3;

class StartContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MiLenguajeParser.RULE_start;
    }

	PASTELES() {
	    return this.getToken(MiLenguajeParser.PASTELES, 0);
	};

	LLAVECITAA() {
	    return this.getToken(MiLenguajeParser.LLAVECITAA, 0);
	};

	NL() {
	    return this.getToken(MiLenguajeParser.NL, 0);
	};

	molde() {
	    return this.getTypedRuleContext(MoldeContext,0);
	};

	LLAVECITAB() {
	    return this.getToken(MiLenguajeParser.LLAVECITAB, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof MiLenguajeVisitor ) {
	        return visitor.visitStart(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MoldeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MiLenguajeParser.RULE_molde;
    }

	declaraciones = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeclaracionesContext);
	    } else {
	        return this.getTypedRuleContext(DeclaracionesContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof MiLenguajeVisitor ) {
	        return visitor.visitMolde(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DeclaracionesContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MiLenguajeParser.RULE_declaraciones;
    }

	type() {
	    return this.getTypedRuleContext(TypeContext,0);
	};

	BOWL() {
	    return this.getToken(MiLenguajeParser.BOWL, 0);
	};

	SEMI() {
	    return this.getToken(MiLenguajeParser.SEMI, 0);
	};

	NL() {
	    return this.getToken(MiLenguajeParser.NL, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof MiLenguajeVisitor ) {
	        return visitor.visitDeclaraciones(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class TypeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = MiLenguajeParser.RULE_type;
    }


	accept(visitor) {
	    if ( visitor instanceof MiLenguajeVisitor ) {
	        return visitor.visitType(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




MiLenguajeParser.StartContext = StartContext; 
MiLenguajeParser.MoldeContext = MoldeContext; 
MiLenguajeParser.DeclaracionesContext = DeclaracionesContext; 
MiLenguajeParser.TypeContext = TypeContext; 
